--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "equilibrium",
+  "name": "EQuilibrium",
   "description": "Equalizer calibration tool",
   "license": "Apache-2.0",
   "author": {
